--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-bittensor>=6.0.0
+async-substrate-interface>=1.0.0
 fastapi>=0.68.0
 uvicorn>=0.15.0
-pydantic>=1.8.0 
+pydantic>=1.8.0
+matplotlib>=3.8.0 
